Fixed Traceline and trying to adjust arrow fire direction

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/MajorArenaLevel.MajorArenaLevel
 GlobalDefaultGameMode=/Game/Gamemodes/BP_MainGameModeBase.BP_MainGameModeBase_C
+EditorStartupMap=/Game/Maps/MajorArenaLevel.MajorArenaLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
